src/main/ui/src/styles.css
/* TODO: Choose a good enough material prebuilt, or create one */
@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";

:root {
  --background: #282727;
  --grey: #6e6e6e;
  --top-bar-color: #4b87bd;
}

html {
  background-color: var(--background);
}

a {
  cursor: pointer;
  text-decoration: none;
}

app-top-bar {
  width: 100%;
  height: 10vh;
  background-color: var(--top-bar-color);
  display: flex;
  align-items: center;
}

app-top-bar h1 {
  color: white;
  margin: 0;
  font-size: 32px;
  width: 150px;
}

body {
  margin: 0;
  font-family: Helvetica, sans-serif;
}

div.ship {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: var(--grey);
  width: 90vw;
  height: 80vh;
  left: 5vw;
  top: 15vh;
  text-align: center;
  border-radius: 1vw;
}

div.ship-name {
  color: #efefef;
  margin: 2%;

}
.ship h2 {
  font-size: 5vh;
  margin: 0;
}

.ship h3 {
  font-size: 3vh;
  margin: 0;
  top: 10%;
}

div.ship-info {
  position: relative;
  background-color: #c0c0c0;
  border-radius: 30px;
  font-size: 3vh;
  width: 80%;
}

.standard-button {
  border-radius: 5px;
  background-color: #949494;
  border-style: hidden;
  color: white;
  font-size: 40px;
  text-align: center;
  margin-top: 5%;
  padding: 20px;
  cursor: pointer;
}

.standard-button:hover {
  background-color: #858585;
}

.standard-button:active {
  background-color: #c0c0c0;
}

app-team-detail, app-team-change-members {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  text-align: center;
  padding: 20px;
}

@media screen and (max-width: 500px) {
  app-team-detail, app-team-change-members {
    width: 100%;
  }
}

